==> SilenceLY05/STM32F103HAL/29-ADC采集/2.ADC—独立模式-单通道-中断/User/ADC/bsp_adc.c <==
#include "bsp_adc.h"

__IO uint32_t ADC_ConvertedValue;
DMA_HandleTypeDef hdma_adcx;
ADC_HandleTypeDef ADC_Handle;
ADC_ChannelConfTypeDef ADC_Config;

static void Rheostat_ADC_GPIO_Config(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;
	
	RHEOSTAT_ADC_CLK_ENABLE();
	
	RHEOSTAT_ADC_GPIO_CLK_ENABLE();
	
	GPIO_InitStructure.Pin = RHEOSTAT_ADC_GPIO_PIN;
	GPIO_InitStructure.Mode = GPIO_MODE_ANALOG;
	GPIO_InitStructure.Pull = GPIO_NOPULL;
	HAL_GPIO_Init(RHEOSTAT_ADC_GPIO_PORT,&GPIO_InitStructure);
}

static void Rheostat_ADC_Mode_Config(void)
{
	RCC_PeriphCLKInitTypeDef ADC_CLKInit;
	
	//开启ADC时钟
	ADC_CLKInit.PeriphClockSelection = RCC_PERIPHCLK_ADC;        //ADC外设时钟
	ADC_CLKInit.AdcClockSelection = RCC_ADCPCLK2_DIV6;           //分频因子6时钟为72M/8=9MHz
	HAL_RCCEx_PeriphCLKConfig(&ADC_CLKInit);                     //设置ADC时钟
	
	ADC_Handle.Instance = RHEOSTAT_ADC;
	ADC_Handle.Init.DataAlign = ADC_DATAALIGN_RIGHT;             //右对齐
	ADC_Handle.Init.ScanConvMode = DISABLE;                      //非扫描模式
	ADC_Handle.Init.ContinuousConvMode = ENABLE;                 //连续转换
	ADC_Handle.Init.NbrOfConversion = 1;                         //1个转换在规则序列中，也就是只转换规则序列1
	ADC_Handle.Init.DiscontinuousConvMode = DISABLE;             //禁止不连续采样模式
	ADC_Handle.Init.NbrOfDiscConversion = 0;                     //不连续采样通道数为0
	ADC_Handle.Init.ExternalTrigConv = ADC_SOFTWARE_START;       //软件触发
	HAL_ADC_Init(&ADC_Handle);
	
	
	
	ADC_Config.Channel = RHEOSTAT_ADC_CHANNEL;
	ADC_Config.Rank = 1;
	//采样时间间隔
	ADC_Config.SamplingTime = ADC_SAMPLETIME_55CYCLES_5;
	
	//配置ADC通道转换顺序为1，第一个转换，采样时间为3个时钟周期
	HAL_ADC_ConfigChannel(&ADC_Handle,&ADC_Config);
	
	HAL_ADC_Start_IT(&ADC_Handle);
}


/* 配置中断优先级 */
static void Rheostat_ADC_NVIC_Config(void)
{
	HAL_NVIC_SetPriority(Rheostat_ADC_IRQ,0,0);
	HAL_NVIC_EnableIRQ(Rheostat_ADC_IRQ);
}


void Rheostat_Init(void)
{
	Rheostat_ADC_GPIO_Config();
	Rheostat_ADC_Mode_Config();
	Rheostat_ADC_NVIC_Config();
}


/* 转换完成中断回调函数(非阻塞模式) AdcHandle:ADC句柄 */
void HAL_ADC_ConvCpltCallback(ADC_HandleTypeDef* AdcHandle)
{
	//获取结果
	ADC_ConvertedValue = HAL_ADC_GetValue(AdcHandle);
}
